<resources>
    <string name="app_name">Questory</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ошибка</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Главная</string>
    <string name="menu_message">Мои сообщения</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Поделиться</string>
    <string name="menu_send">Send</string>

    <string name="email">Адрес электронной почты*</string>
    <string name="quests">Квесты</string>
    <string name="findquests">Найти квесты</string>
    <string name="myquests">Мои квесты</string>
    <string name="startedquests">Начатые квесты</string>
    <string name="endedquests">Законченные квесты</string>
    <string name="settings">Настройки</string>
    <string name="message">Уведомления</string>
    <string name="forcheck">Задания на проверку</string>
    <string name="todevelopers">Связаться с разработчиками</string>
    <string name="attemptsmore">Осталось попыток:</string>

    <string name="user_location_permission_explanation">Чтобы отображать ваше местоположение на карте, нам нужно разрешение на использование геолокации</string>
    <string name="user_location_permission_not_granted">Отображение геопозиции невозможно, т.к. отсутствует разрешение на использование геопозиции</string>
    <string name="access_token">pk.eyJ1IjoiYW5uc3dlZXRlbmVyIiwiYSI6ImNrNXFscXRnODAzbDAzaG5sZWZyeTl4d28ifQ.2PYyCnrD_OHe2OI0HNx9VA</string>


    <string name="location_picker_place_name_result">Place name: %1$s</string>
    <string name="location_picker_dropped_marker_snippet_no_results">No results</string>
    <string name="location_picker_select_location_button_cancel">Cancel</string>
    <string name="location_picker_select_location_button_select">Select a location</string>
    <string name="move_map_instruction">Move map to place\nmarker at desired location</string>
    <string name="verify_text">Чтобы подтвердить адрес электронной почты, перейдите по ссылке в письме, отправленном на адрес</string>


    <string-array
        name="loading_array">
        <item
            >Загружаем тайны вашего города</item>
    </string-array>


</resources>
